# izuka_llm

./: pyproject.toml
src/izuka_llm/: main.py
src/izuka_llm/adapters/: llm.py
src/izuka_llm/agents/: character.py
src/izuka_llm/app/: api.py  openai_compatable.py
src/izuka_llm/config/: config.py
src/izuka_llm/schemas/: dto.py
