[project]
name = "izuka-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.2",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.2",
    "loguru>=0.7.3",
    "pydantic-settings>=2.11.0",
    "uvicorn>=0.38.0",
]
[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
